--- a/package.json
+++ b/package.json
@@ -18,33 +18,24 @@
     "lint": "eslint '**/*.{json,ts,js,vue}'"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.7.0",
-    "@iconify/json": "^1.1.392",
+    "@preact/preset-vite": "^2.1.0",
     "@types/fs-extra": "^9.0.12",
     "@types/node": "^16.7.1",
     "@types/webextension-polyfill": "^0.8.0",
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@vitejs/plugin-vue": "^1.6.0",
-    "@vue/compiler-sfc": "^3.2.6",
-    "@vueuse/core": "^6.0.0",
     "chokidar": "^3.5.2",
     "cross-env": "^7.0.3",
     "crx": "^5.0.1",
-    "eslint": "^7.32.0",
     "esno": "^0.9.1",
     "fs-extra": "^10.0.0",
     "kolorist": "^1.5.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "typescript": "^4.3.5",
-    "unplugin-auto-import": "^0.1.4",
     "vite": "^2.5.1",
-    "vite-plugin-components": "^0.13.2",
-    "vite-plugin-icons": "^0.6.5",
     "vite-plugin-windicss": "^1.3.0",
-    "vue": "^3.2.6",
-    "vue-demi": "^0.11.3",
-    "webext-bridge": "^4.1.1",
     "webextension-polyfill": "^0.8.0"
+  },
+  "dependencies": {
+    "preact": "^10.5.14"
   }
 }
