--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
     "types": [
       "vite/client"
     ],
+    "jsx": "preserve",
+    "jsxFactory": "h",
+    "jsxFragmentFactory": "Fragment",
     "paths": {
       "~/*": ["src/*"]
     }
